--- a/src/publications/articles/2011-LM-Protention-Retention-Biology/index.njk
+++ b/src/publications/articles/2011-LM-Protention-Retention-Biology/index.njk
@@ -5925,27 +5925,27 @@ We would like to thank the anonymous referee for his/her critical comments and s
 <ol class="thebibliography">
   <li class="bibitem" id="X0-bailly2008">
        Bailly, F., and G. Longo. 2008. “Extended critical situations: the physical singularity of life phenomena.” <span class="cmti-10">Journal of Biological Systems </span>16 (2): 309. doi:
-      <a id="pagee32" href="http://dx.doi.org/10.1142/S0218339008002514">10.1142/S0218339008002514</a>. (Cited on pages <a href="#pagee3">3</a>, <a href="#pagee5">5</a>).
+      <a id="pagee32" href="https://doi.org/10.1142/S0218339008002514">10.1142/S0218339008002514</a>. (Cited on pages <a href="#pagee3">3</a>, <a href="#pagee5">5</a>).
     </li>
   <li class="bibitem" id="X0-bailly2009">
       _________. 2009. “Biological organization and anti-entropy.” <span class="cmti-10">Journal of Biological</span> <span class="cmti-10">Systems </span>17 (1): 63–96. doi:
-      <a href="http://dx.doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715</a>. (Cited on page <a href="#pagee3">3</a>).
+      <a href="https://doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715</a>. (Cited on page <a href="#pagee3">3</a>).
     </li>
   <li class="bibitem" id="X0-bailly2011">_________. 2011. <span class="cmti-10">Mathematics and the natural sciences; The Physical Singularity of Life.</span> London: Imperial College Press. (Cited on page <a href="#pagee3">3</a>).</li>
   <li class="bibitem" id="X0-bailly2011b">
       Bailly, F., G. Longo, and M. Montévil. 2011. “A 2-dimensional geometry for biological time.” <span class="cmti-10">Progress in Biophysics and Molecular Biology </span>106 (3): 474–484.
       <span class="cmcsc-10x-x-109"><span class="small-caps">issn</span></span>: 0079-6107. doi:
-      <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001</a>. (Cited on pages <a href="#pagee3">3</a>, <a href="#pagee31">31</a>).
+      <a href="https://doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001</a>. (Cited on pages <a href="#pagee3">3</a>, <a href="#pagee31">31</a>).
     </li>
   <li class="bibitem" id="X0-Bak88">
       Bak, P., C. Tang, and K. Wiesenfeld. 1988. “Self-organized criticality.” <span class="cmti-10">Physical review</span> <span class="cmti-10">A </span>38 (1): 364–374. doi:
-      <a href="http://dx.doi.org/10.1103/PhysRevA.38.364">10.1103/PhysRevA.38.364</a>. (Cited on page <a href="#pagee5">5</a>).
+      <a href="https://doi.org/10.1103/PhysRevA.38.364">10.1103/PhysRevA.38.364</a>. (Cited on page <a href="#pagee5">5</a>).
     </li>
   <li class="bibitem" id="X0-Bell98">Bell, J. 1998. <span class="cmti-10">A Primer in Infinitesimal Analysis. </span>Cambridge U.P. (Cited on page <a href="#pagee30">30</a>).</li>
   <li class="bibitem" id="X0-Berthoz02">Berthoz, A. 2002. <span class="cmti-10">The Brain’s Sense of Movement. </span>Harvard U.P. (Cited on pages <a href="#pagee4">4</a>, <a href="#pagee30">30</a>).</li>
   <li class="bibitem" id="X0-botzung2008">
       Botzung, A., E. Denkova, and L. Manning. 2008. “Experiencing past and future personal events: Functional neuroimaging evidence on the neural bases of mental time travel.”
-      <span class="cmti-10">Brain and Cognition </span>66 (2): 202–212. doi:<a href="http://dx.doi.org/10.1016/j.bandc.2007.07.011">10.1016/j.bandc.2007.07.011</a>. (Cited on page <a href="#pagee35">35</a>).
+      <span class="cmti-10">Brain and Cognition </span>66 (2): 202–212. doi:<a href="https://doi.org/10.1016/j.bandc.2007.07.011">10.1016/j.bandc.2007.07.011</a>. (Cited on page <a href="#pagee35">35</a>).
     </li>
   <li class="bibitem" id="X0-edelman2000">
       Edelman, G.M., and G. Tononi. 2000. “Reentry and the dynamic core: neural correlates of conscious experience.” In <span class="cmti-10">Neural Correlates of Consciousness: Empirical</span>
@@ -5953,11 +5953,11 @@ We would like to thank the anonymous referee for his/her critical comments and s
     </li>
   <li class="bibitem" id="X0-Field87">
       Field, D.J. 1987. “Relations between the statistics of natural images and the response properties of cortical cells.” <span class="cmti-10">Journal of the Optical Society of America A </span>4 (12): 2379–2394. doi:
-      <a href="http://dx.doi.org/10.1364/JOSAA.4.002379">10.1364/JOSAA.4.002379</a>. (Cited on page <a href="#pagee30">30</a>).
+      <a href="https://doi.org/10.1364/JOSAA.4.002379">10.1364/JOSAA.4.002379</a>. (Cited on page <a href="#pagee30">30</a>).
     </li>
   <li class="bibitem" id="X0-Field93">
       Field, D.J., A. Hayes, and R.F. Hess. 1993. “Contour integration by the human visual system: Evidence for a local association field.” <span class="cmti-10">Vision Research </span>33 (2): 173–193. doi:
-      <a href="http://dx.doi.org/10.1016/0042-6989(93)90156-Q">10.1016/0042-6989(93)90156-Q</a>. (Cited on page <a href="#pagee30">30</a>).
+      <a href="https://doi.org/10.1016/0042-6989(93)90156-Q">10.1016/0042-6989(93)90156-Q</a>. (Cited on page <a href="#pagee30">30</a>).
     </li>
   <li class="bibitem" id="X0-stuart1993origins">
       Kauffman, Stuart A. 1993. <span class="cmti-10">The origins of order: Self organization and selection in</span> <span class="cmti-10">evolution. </span>Oxford university press. (Cited on page
@@ -5965,20 +5965,20 @@ We would like to thank the anonymous referee for his/her critical comments and s
     </li>
   <li class="bibitem" id="X0-levanquyen2003">
       Le Van Quyen, M. 2003. “Disentangling the dynamic core: a research program for a neurodynamics at the large-scale.” <span class="cmti-10">Biological Research </span>36:67–88. doi:
-      <a href="http://dx.doi.org/10.4067/S0716-97602003000100006">10.4067/S0716-97602003000100006</a>. (Cited on page <a href="#pagee28">28</a>).
+      <a href="https://doi.org/10.4067/S0716-97602003000100006">10.4067/S0716-97602003000100006</a>. (Cited on page <a href="#pagee28">28</a>).
     </li>
   <li class="bibitem" id="X0-lindstedt">
       Lindstedt, S.L., and W.A. Calder III. 1981. “Body size, physiological time, and longevity of homeothermic animals.” <span class="cmti-10">Quarterly Review of Biology: </span>1–16. doi:
-      <a href="http://dx.doi.org/10.1086/412080">10.1086/412080</a>. (Cited on page <a href="#pagee5">5</a>).
+      <a href="https://doi.org/10.1086/412080">10.1086/412080</a>. (Cited on page <a href="#pagee5">5</a>).
     </li>
   <li class="bibitem" id="X0-longo2011">
       Longo, G., and M. Montévil. 2011. “Protention and retention in biological systems.” <span class="cmti-10">Theory in</span> <span class="cmti-10">Biosciences </span>130 (2): 107–117.
       <span class="cmcsc-10x-x-109"><span class="small-caps">issn</span></span>: 1431-7613. doi:
-      <a href="http://dx.doi.org/10.1007/s12064-010-0116-6">10.1007/s12064-010-0116-6</a>.
+      <a href="https://doi.org/10.1007/s12064-010-0116-6">10.1007/s12064-010-0116-6</a>.
     </li>
   <li class="bibitem" id="X0-Misslin">
       Misslin, R. 2003. “Une vie de cellule.” <span class="cmti-10">Revue de Synth</span><span class="cmti-10">è</span><span class="cmti-10">se </span>124 (1): 205–221. doi:
-      <a href="http://dx.doi.org/10.1007/BF02963405">10.1007/BF02963405</a>. (Cited on page <a href="#pagee4">4</a>).
+      <a href="https://doi.org/10.1007/BF02963405">10.1007/BF02963405</a>. (Cited on page <a href="#pagee4">4</a>).
     </li>
   <li class="bibitem" id="X0-Nicolas">
       Nicolas, F. 2006. “Quelle unité pour l’œuvre musicale?” In <span class="cmti-10">Les math</span><span class="cmti-10">é</span><span class="cmti-10">matiques, les</span> <span class="cmti-10">id</span>
@@ -5988,7 +5988,7 @@ We would like to thank the anonymous referee for his/her critical comments and s
   <li class="bibitem" id="X0-Perfetti1976">
       Perfetti, C.A., and S.R. Goldman. 1976. “Discourse memory and reading comprehension skill.” <span class="cmti-10">Journal of Verbal Learning and Verbal Behavior </span>15 (1): 33–42.
       <span class="cmcsc-10x-x-109"><span class="small-caps">issn</span></span>: 0022-5371. doi:
-      <a href="http://dx.doi.org/10.1016/S0022-5371(76)90004-9">10.1016/S0022-5371(76)90004-9</a>. (Cited on page <a href="#pagee2">2</a>).
+      <a href="https://doi.org/10.1016/S0022-5371(76)90004-9">10.1016/S0022-5371(76)90004-9</a>. (Cited on page <a href="#pagee2">2</a>).
     </li>
   <li class="bibitem" id="X0-Petitot08">
       Petitot, J. 2008. <span class="cmti-10">Neurog</span><span class="cmti-10">é</span><span class="cmti-10">om</span><span class="cmti-10">é</span>
@@ -5996,19 +5996,19 @@ We would like to thank the anonymous referee for his/her critical comments and s
     </li>
   <li class="bibitem" id="X0-amoeba">
       Saigusa, T., A. Tero, T. Nakagaki, and Y. Kuramoto. 2008. “Amoebae anticipate periodic events.” <span class="cmti-10">Physical Review Letters</span> 100 (1): 018101. doi:
-      <a href="http://dx.doi.org/10.1103/PhysRevLett.100.018101">10.1103/PhysRevLett.100.018101</a>. (Cited on pages <a href="#pagee4">4</a>, <a href="#pagee16">16</a>, <a href="#pagee20">20</a>).
+      <a href="https://doi.org/10.1103/PhysRevLett.100.018101">10.1103/PhysRevLett.100.018101</a>. (Cited on pages <a href="#pagee4">4</a>, <a href="#pagee16">16</a>, <a href="#pagee20">20</a>).
     </li>
   <li class="bibitem" id="X0-savage2004">
       Savage, V.M., J.F. Gilloly, W.H. Woodruff, G.B. West, A.P. Allen, B.J. Enquist, and J.H. Brown. 2004. “The predominance of quarter-power scaling in biology.” <span class="cmti-10">Ecology</span> 18:257–282. doi:
-      <a href="http://dx.doi.org/10.1111/j.0269-8463.2004.00856.x">10.1111/j.0269-8463.2004.00856.x</a>. (Cited on page <a href="#pagee5">5</a>).
+      <a href="https://doi.org/10.1111/j.0269-8463.2004.00856.x">10.1111/j.0269-8463.2004.00856.x</a>. (Cited on page <a href="#pagee5">5</a>).
     </li>
   <li class="bibitem" id="X0-suzuki1982critical">
       Suzuki, M., K. Kaneko, and S. Takesue. 1982. “Critical Slowing Down in Stochastic Processes. I.” <span class="cmti-10">Progress of Theoretical Physics </span>67 (6): 1756–1775. doi:
-      <a href="http://dx.doi.org/10.1143/PTP.67.1756">10.1143/PTP.67.1756</a>. (Cited on page <a href="#pagee6">6</a>).
+      <a href="https://doi.org/10.1143/PTP.67.1756">10.1143/PTP.67.1756</a>. (Cited on page <a href="#pagee6">6</a>).
     </li>
   <li class="bibitem" id="X0-szpunar2007">
       Szpunar, K.K., J.M. Watson, and K.B. McDermott. 2007. “Neural substrates of envisioning the future.” <span class="cmti-10">Proceedings of the National Academy of Sciences </span>104 (2): 642. doi:
-      <a href="http://dx.doi.org/10.1073/pnas.0610082104">10.1073/pnas.0610082104</a>. (Cited on page <a href="#pagee35">35</a>).
+      <a href="https://doi.org/10.1073/pnas.0610082104">10.1073/pnas.0610082104</a>. (Cited on page <a href="#pagee35">35</a>).
     </li>
   <li class="bibitem" id="X0-vangelder1999">
       Van Gelder, T. 1999. “Wooden iron? Husserlian phenomenology meets cognitive science.” In <span class="cmti-10">Naturalizing Phenomenology: Issues in Contemporary Phenomenology</span>
@@ -6016,7 +6016,7 @@ We would like to thank the anonymous referee for his/her critical comments and s
     </li>
   <li class="bibitem" id="X0-varela1997">
       Varela, F.J. 1997. “Patterns of life: Intertwining identity and cognition.” <span class="cmti-10">Brain and</span> <span class="cmti-10">Cognition </span>34 (1): 72–87. doi:
-      <a href="http://dx.doi.org/10.1006/brcg.1997.0907">10.1006/brcg.1997.0907</a>. (Cited on page <a href="#pagee28">28</a>).
+      <a href="https://doi.org/10.1006/brcg.1997.0907">10.1006/brcg.1997.0907</a>. (Cited on page <a href="#pagee28">28</a>).
     </li>
   <li class="bibitem" id="X0-varela1999">
       _________. 1999. “The specious present: A neurophenomenology of time consciousness.” In <span class="cmti-10">Naturalizing phenomenology: Issues in contemporary phenomenology and cognitive</span>
@@ -6024,7 +6024,7 @@ We would like to thank the anonymous referee for his/her critical comments and s
     </li>
   <li class="bibitem" id="X0-vaz1978">
       Vaz, N.M., and F.J. Varela. 1978. “Self and non-sense: an organism-centered approach to immunology.” <span class="cmti-10">Medical Hypotheses </span>4 (3): 231–267. doi:
-      <a href="http://dx.doi.org/10.1016/0306-9877(78)90005-1">10.1016/0306-9877(78)90005-1</a>. (Cited on page <a href="#pagee28">28</a>).
+      <a href="https://doi.org/10.1016/0306-9877(78)90005-1">10.1016/0306-9877(78)90005-1</a>. (Cited on page <a href="#pagee28">28</a>).
     </li>
   <li class="bibitem" id="X0-wildman1978semantic">Wildman, D.M., and M. Kling. 1978. “Semantic, syntactic, and spatial anticipation in reading.” <span class="cmti-10">Reading Research Quarterly </span>14 (2): 128–164. (Cited on page <a href="#pagee2">2</a>).
   </li>
