--- a/src/publications/articles/2014-PMF-Ecological-Models-Cells-Genes/index.njk
+++ b/src/publications/articles/2014-PMF-Ecological-Models-Cells-Genes/index.njk
@@ -3189,7 +3189,7 @@ et al</a> (<a href="#Xhirayama2003cyclic">2003</a>); <a href="#Xxiao2003perio
     S, Andolfi G, Tabucchi A, Carlucci F, Marinello E, Cattaneo F, Vai S,
     Servida P, Miniero R, Roncarolo MG, Bordignon C (2002a) Correction
     of ada-scid by stem cell gene therapy combined with nonmyeloablative
-    conditioning. Science 296(5577):2410–2413, DOI 10.1126/science.1070104,
+    conditioning. Science 296(5577):2410–2413, doi: <a href="https://doi.org/10.1126/science.1070104">10.1126/science.1070104</a>,
     URL <a href="http://www.sciencemag.org/content/296/5577/2410.abstract" class="url">http://www.sciencemag.org/content/296/5577/2410.abstract</a>,
     <a href="http://www.sciencemag.org/content/296/5577/2410.full.pdf" class="url">http://www.sciencemag.org/content/296/5577/2410.full.pdf</a>
   </li>
@@ -3281,7 +3281,7 @@ et al</a> (<a href="#Xhirayama2003cyclic">2003</a>); <a href="#Xxiao2003perio
   </li>
 <li class="bibitem" id="XPerazzo00"> Perazzo C, Fernandez E, Chialvo D, Willshaw P (2000) Large
     scale-invariant fluctuations in normal blood cell counts: A sign of
-    criticality? Fractals 8(3):279–283, DOI 10.1142/S0218348X00000329, URL
+    criticality? Fractals 8(3):279–283, doi: <a href="https://doi.org/10.1142/S0218348X00000329">10.1142/S0218348X00000329</a>, URL
     <a href="http://www.worldscinet.com/fractals/08/0803/S0218348X00000329.html" class="url">http://www.worldscinet.com/fractals/08/0803/S0218348X00000329.html</a>
   </li>
 <li class="bibitem" id="Xsangalli2001vitro"> Sangalli M, Maroni A, Zema L, Busetti C, Giordano F, Gazzaniga A (2001)
