--- a/src/publications/articles/2019-Montevil-First-Principles-Biology/index.njk
+++ b/src/publications/articles/2019-Montevil-First-Principles-Biology/index.njk
@@ -2197,22 +2197,22 @@ tags:
   </li>
 <li  class="bibitem" id="Xbailly2011"> [2] Bailly, F., &amp; Longo, G. (2011). <span class="cmti-10">Mathematics and the natural sciences; The</span>
     <span class="cmti-10">Physical Singularity of Life</span>. London: Imperial College Press. doi:
-    <a href="http://dx.doi.org/10.1142/p774">10.1142/p774
+    <a href="https://doi.org/10.1142/p774">10.1142/p774
 </a>.
   </li>
 <li  class="bibitem" id="Xmeasurement"> [3] Bookstein, F. (2009). Measurement, explanation, and biology: Lessons from a long century.
     <span class="cmti-10">Biological Theory</span>, <span class="cmti-10">4</span>, 6–20. doi:
-    <a href="http://dx.doi.org/10.1162/biot.2009.4.1.6">10.1162/biot.2009.4.1.6
+    <a href="https://doi.org/10.1162/biot.2009.4.1.6">10.1162/biot.2009.4.1.6
 </a>.
   </li>
 <li  class="bibitem" id="XCavagna29062010"> [4] Cavagna, A., Cimarelli, A., Giardina, I., Parisi, G., Santagati, R., Stefanini, F., &amp; Viale, M. (2010). Scale-free
     correlations in starling flocks. <span class="cmti-10">Proceedings of the</span> <span class="cmti-10">National Academy of Sciences</span>, <span class="cmti-10">107</span>, 11865–11870. doi:
-    <a href="http://dx.doi.org/10.1073/pnas.1005766107">10.1073/pnas.1005766107
+    <a href="https://doi.org/10.1073/pnas.1005766107">10.1073/pnas.1005766107
 </a>.
   </li>
 <li  class="bibitem" id="Xchang2004inventing"> [5] Chang, H. (2004). <span class="cmti-10">Inventing temperature: Measurement and scientific progress</span>. Oxford
     University Press. doi:
-    <a href="http://dx.doi.org/10.1093/0195171276.001.0001">10.1093/0195171276.001.0001
+    <a href="https://doi.org/10.1093/0195171276.001.0001">10.1093/0195171276.001.0001
 </a>.
   </li>
 <li  class="bibitem" id="Xdarwin1872origin"> [6] Darwin, C. (1872). <span class="cmti-10">The Origin of Species by Means of Natural Selection 6th</span>
@@ -2220,14 +2220,14 @@ tags:
   </li>
 <li  class="bibitem" id="XELHANI2007"> [7] El-Hani, C. N. A. (2007). Between the cross and the sword: the crisis of the gene concept.
     <span class="cmti-10">Genetics and Molecular Biology</span>, <span class="cmti-10">30</span>, 297 – 307. doi:
-    <a href="http://dx.doi.org/10.1590/S1415-47572007000300001">10.1590/S1415-47572007000300001
+    <a href="https://doi.org/10.1590/S1415-47572007000300001">10.1590/S1415-47572007000300001
 </a>.
   </li>
 <li  class="bibitem" id="Xfoucault2"> [8] Foucault, M. (1994). texte 350: Le souci de la vérité. In <span class="cmti-10">Dits et </span><span class="cmti-10">é</span><span class="cmti-10">crits:</span> <span class="cmti-10">(1980-1988) </span>Bibliothèque des Sciences humaines (p. 668). Editions Gallimard.</li>
 <li  class="bibitem" id="Xfox2000century"> [9] Fox Keller, E. (2002). <span class="cmti-10">The century of the gene</span>. Harvard University Press.</li>
 <li  class="bibitem" id="Xhoule2011measurement"> [10] Houle, D., Pélabon, C., Wagner, G. P., &amp; Hansen, T. F. (2011). Measurement and meaning in biology.
     <span class="cmti-10">The Quarterly Review of Biology</span>, <span class="cmti-10">86</span>, 3–34. doi:
-    <a href="http://dx.doi.org/10.1086/658408">10.1086/ 658408
+    <a href="https://doi.org/10.1086/658408">10.1086/ 658408
 </a>.
   </li>
 <li  class="bibitem" id="Xkauffman2002investigations"> [11] Kauffman, S. (2002). <span class="cmti-10">Investigations</span>. Oxford University Press, USA.</li>
@@ -2236,47 +2236,47 @@ tags:
   </li>
 <li  class="bibitem" id="Xlindstedt"> [13] Lindstedt, S., &amp; Calder III, W. (1981). Body size, physiological time, and longevity of homeothermic animals.
     <span class="cmti-10">Quarterly Review of Biology</span>, (pp. 1–16). doi:
-    <a href="http://dx.doi.org/10.1086/412080">10.1086/412080
+    <a href="https://doi.org/10.1086/412080">10.1086/412080
 </a>.
   </li>
 <li  class="bibitem" id="Xscaling2014"> [14] Longo, G., &amp; Montévil, M. (2014). Scaling and scale symmetries in biological systems. In
     <span class="cmti-10">Perspectives on Organisms </span>Lecture Notes in Morphogenesis (pp. 23–73). Springer Berlin Heidelberg. doi:
-    <a href="http://dx.doi.org/10.1007/978-3-642-35938-5_2">10.1007/978-3-642-35938-5_2
+    <a href="https://doi.org/10.1007/978-3-642-35938-5_2">10.1007/978-3-642-35938-5_2
 </a>.
   </li>
 <li  class="bibitem" id="Xmontevilmeasure"> [15] Montévil, M. (2019). Measurement in biology is methodized by theory. <span class="cmti-10">Biology</span>
     <span class="cmti-10">&amp; Philosophy</span>, <span class="cmti-10">34</span>, 35. doi:
-    <a href="http://dx.doi.org/10.1007/s10539-019-9687-x">10.1007/s10539-019-9687-x
+    <a href="https://doi.org/10.1007/s10539-019-9687-x">10.1007/s10539-019-9687-x
 </a>.
   </li>
 <li  class="bibitem" id="XMontevil2015c"> [16] Montévil, M., &amp; Mossio, M. (2015). Biological organisation as closure of constraints.
     <span class="cmti-10">Journal of Theoretical Biology</span>, <span class="cmti-10">372</span>, 179 – 191. doi:
-    <a href="http://dx.doi.org/10.1016/j.jtbi.2015.02.029">10.1016/j.jtbi. 2015.02.029
+    <a href="https://doi.org/10.1016/j.jtbi.2015.02.029">10.1016/j.jtbi. 2015.02.029
 </a>.
   </li>
 <li  class="bibitem" id="Xchaptervariation"> [17] Montévil, M., Mossio, M., Pocheville, A., &amp; Longo, G. (2016). Theoretical principles for biology: Variation.
     <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, <span class="cmti-10">122</span>, 36 – 50. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005">10.1016/j.pbiomolbio.2016.08.005
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.005">10.1016/j.pbiomolbio.2016.08.005
 </a>.
   </li>
 <li  class="bibitem" id="Xchapterconstraints"> [18] Montévil, M., Speroni, L., Sonnenschein, C., &amp; Soto, A. M. (2016). Modeling mammary organogenesis from
     biological first principles: Cells and their physical constraints. <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, <span class="cmti-10">122</span>, 58 – 69. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.004">10. 1016/j.pbiomolbio.2016.08.004
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.004">10. 1016/j.pbiomolbio.2016.08.004
 </a>.
   </li>
 <li  class="bibitem" id="Xmora2010biological"> [19] Mora, T., &amp; Bialek, W. (2011). Are biological systems poised at criticality?
     <span class="cmti-10">Journal of Statistical Physics</span>, <span class="cmti-10">144</span>, 268–302. doi:
-    <a href="http://dx.doi.org/10.1007/s10955-011-0229-4">10.1007/s10955-011-0229-4
+    <a href="https://doi.org/10.1007/s10955-011-0229-4">10.1007/s10955-011-0229-4
 </a>.
   </li>
 <li  class="bibitem" id="Xchapterorganization"> [20] Mossio, M., Montévil, M., &amp; Longo, G. (2016). Theoretical principles for biology: Organization.
     <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, <span class="cmti-10">122</span>, 24 – 35. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.005">10.1016/j.pbiomolbio.2016.07.005
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.005">10.1016/j.pbiomolbio.2016.07.005
 </a>.
   </li>
 <li  class="bibitem" id="XNoble2017"> [21] Noble, D. (2017). Systems biology beyond the genome. In S. Green (Ed.),
     <span class="cmti-10">Philosophy of Systems Biology: Perspectives from Scientists and Philosophers</span> (pp. 227–235). Cham: Springer International Publishing. doi:
-    <a href="http://dx.doi.org/10.1007/978-3-319-47000-9_21">10.1007/ 978-3-319-47000-9_21
+    <a href="https://doi.org/10.1007/978-3-319-47000-9_21">10.1007/ 978-3-319-47000-9_21
 </a>.
   </li>
 <li  class="bibitem" id="Xrosen2005"> [22] Rosen, R. (1991). <span class="cmti-10">Life itself: a comprehensive inquiry into the nature, origin,</span>
@@ -2284,13 +2284,13 @@ tags:
   </li>
 <li  class="bibitem" id="Xsavage2004"> [23] Savage, V., Gilloly, J., Woodruff, W., West, G., Allen, A., Enquist, B., &amp; Brown, J. (2004). The predominance of
     quarter-power scaling in biology. <span class="cmti-10">Ecology</span>, <span class="cmti-10">18</span>, 257–282. doi:
-    <a href="http://dx.doi.org/10.1111/j.0269-8463.2004.00856.x">10.1111/j.0269-8463.2004.00856.x
+    <a href="https://doi.org/10.1111/j.0269-8463.2004.00856.x">10.1111/j.0269-8463.2004.00856.x
 </a>.
   </li>
 <li  class="bibitem" id="X101086606023"> [24] Sieg, A., O’Connor, M., McNair, J., Grant, B., Agosta, S., Dunham, A., Hurst, A. E. G., &amp; McPeek, E. M. A.
     (2009). Mammalian metabolic allometry: Do intraspecific variation, phylogeny, and regression models matter? <span class="cmti-10">The American</span> <span class="cmti-10">Naturalist</span>,
     <span class="cmti-10">174</span>, 720–733. doi:
-    <a href="http://dx.doi.org/10.1086/606023">10.1086/606023
+    <a href="https://doi.org/10.1086/606023">10.1086/606023
 </a>.
   </li>
 <li  class="bibitem" id="XSociety"> [25] Sonnenschein, C., &amp; Soto, A. (1999). <span class="cmti-10">The society of cells: cancer and control</span>
@@ -2299,24 +2299,24 @@ tags:
 <li  class="bibitem" id="Xchapterccl"> [26] Soto, A. M., Longo, G., Miquel, P.-A., Montevil, M., Mossio, M., Perret, N., Pocheville, A., &amp; Sonnenschein, C. (2016).
     Toward a theory of organisms: Three founding principles in search of a useful integration. <span class="cmti-10">Progress in Biophysics and</span> <span class="cmti-10">Molecular Biology</span>,
     <span class="cmti-10">122</span>, 77 – 82. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.006">10.1016/j.pbiomolbio.2016.07.006
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.006">10.1016/j.pbiomolbio.2016.07.006
 </a>.
   </li>
 <li  class="bibitem" id="Xchapterdefault"> [27] Soto, A. M., Longo, G., Montévil, M., &amp; Sonnenschein, C. (2016). The biological default state of cell proliferation
     with variation and motility, a fundamental principle for a theory of organisms. <span class="cmti-10">Progress in Biophysics and</span> <span class="cmti-10">Molecular Biology</span>,
     <span class="cmti-10">122</span>, 16 – 23. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.006">10.1016/j.pbiomolbio.2016.06.006
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2016.06.006">10.1016/j.pbiomolbio.2016.06.006
 </a>.
   </li>
 <li  class="bibitem" id="Xvan1989laws"> [28] Van Fraassen, B. (1989). <span class="cmti-10">Laws and symmetry</span>. Oxford University Press, USA.</li>
 <li  class="bibitem" id="XVarela1974187"> [29] Varela, F., Maturana, H., &amp; Uribe, R. (1974). Autopoiesis: The organization of living systems, its characterization and a
     model. <span class="cmti-10">Biosystems</span>, <span class="cmti-10">5</span>, 187 – 196. doi:
-    <a href="http://dx.doi.org/10.1016/0303-2647(74)90031-8">10.1016/0303-2647(74)90031-8
+    <a href="https://doi.org/10.1016/0303-2647(74)90031-8">10.1016/0303-2647(74)90031-8
 </a>.
   </li>
 <li  class="bibitem" id="XWeibel_2004"> [30] Weibel, E., Bacigalupe, L., Schmitt, B., &amp; Hoppeler, H. (2004). Allometric scaling of maximal metabolic rate in mammals:
     Muscle aerobic capacity as determinant factor. <span class="cmti-10">Respiratory Physiology and Neurobiology</span>, <span class="cmti-10">140</span>, 115–132. doi:
-    <a href="http://dx.doi.org/10.1016/j.resp.2004.01.006">10.1016/j.resp.2004.01.006
+    <a href="https://doi.org/10.1016/j.resp.2004.01.006">10.1016/j.resp.2004.01.006
 </a>.
   </li>
 <li  class="bibitem" id="Xwest2003developmental"> [31] West-Eberhard, M. J. (2003). <span class="cmti-10">Developmental plasticity and evolution</span>. Oxford
@@ -2324,7 +2324,7 @@ tags:
   </li>
 <li  class="bibitem" id="Xwolkenhauer2013search"> [32] Wolkenhauer, O., &amp; Green, S. (2013). The search for organizing principles as a cure against reductionism in
     systems medicine. <span class="cmti-10">The FEBS journal</span>, <span class="cmti-10">280</span>, 5938–5948. doi:
-    <a href="http://dx.doi.org/10.1111/febs.12311">10.1111/febs.12311
+    <a href="https://doi.org/10.1111/febs.12311">10.1111/febs.12311
 </a>.
   </li>
 </ol>
