--- a/src/publications/articles/2020-Montevil-Turing-Biology/index.njk
+++ b/src/publications/articles/2020-Montevil-Turing-Biology/index.njk
@@ -483,7 +483,7 @@ Turing, morphogenesis, entropy, anti-entropy, historicity, epistemology</p>
       <a class="sdfootnotesym" href="#sdfootnote2anc" id="sdfootnote2sym">1</a>Mail :
       <u><a href="mailto:Mael.montevil@gmail.com">Mael.montevil@gmail.com</a></u>
       Web :
-      <u><a href="https://montevil.theobio.org/">https://montevil.theobio.org/</a></u>
+      <u><a href="https://montevil.org/">https://montevil.org/</a></u>
     <br>Institut de Recherche et d’Innovation, Centre Pompidou, 4 Rue Aubry le Boucher, 75004 Paris.<br>Institut d’Histoire et Philosophie des Sciences et des Techniques, UMR 8590, Université Paris 1, 13 Rue du Four, 75006 Paris.</p>
   </div>
   <div id="sdfootnote3">
