--- a/src/publications/articles/2011-BLM-2D-Time-Biology/index.njk
+++ b/src/publications/articles/2011-BLM-2D-Time-Biology/index.njk
@@ -6682,35 +6682,35 @@ and intermittent pacing. (c) Female, 72, with atrial fibrillation. (d) Male, 43,
 <ol class="thebibliography">
   <li class="bibitem" id="X0-bailly1993">
       Bailly, F., F. Gaill &amp; R. Mosseri. 1993. “Orgons and biolons in theoretical biology: Phenomenological analysis and quantum analogies.” <span class="cmti-10">Acta Biotheoretica </span>41 (1–2): 3–11. doi:
-      <a href="http://dx.doi.org/10.1007/BF00712769">10.1007/BF00712769</a>.
+      <a href="https://doi.org/10.1007/BF00712769">10.1007/BF00712769</a>.
     </li>
   <li class="bibitem" id="X0-bailly2006">
       Bailly, F., &amp; G. Longo. 2006. <span class="cmti-10">Math</span><span class="cmti-10">é</span><span class="cmti-10">matiques &amp; sciences de la nature: la singularit</span><span class="cmti-10">é</span>
       <span class="cmti-10">physique du</span> <span class="cmti-10">vivant. </span>Hermann. (Cited on page <a href="#pagee3">3</a>).
     </li>
   <li class="bibitem" id="X0-bailly2009">
-      _________. 2009. “Biological organization and anti-entropy.” <span class="cmti-10">Journal of Biological Systems </span>17 (1): 63–96. doi:<a href="http://dx.doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715</a>.
+      _________. 2009. “Biological organization and anti-entropy.” <span class="cmti-10">Journal of Biological Systems </span>17 (1): 63–96. doi:<a href="https://doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715</a>.
       (Cited on pages <a href="#pagee3">3</a> <a href="#pagee4">sq.</a>, <a href="#pagee6">6</a>).
     </li>
   <li class="bibitem" id="X0-bailly2011">_________. 2011. <span class="cmti-10">Mathematics and the natural sciences; The Physical Singularity of Life. </span>London: Imperial College Press. (Cited on page <a href="#pagee3">3</a>).</li>
   <li class="bibitem" id="X0-bailly2011b">
       Bailly, F., G. Longo &amp; M. Montévil. 2011. “A 2-dimensional geometry for biological time.” <span class="cmti-10">Progress in Biophysics and Molecular Biology </span>106 (3): 474–484.
       <span class="small-caps">issn</span>: 0079-6107. doi:
-      <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001</a>.
+      <a href="https://doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001</a>.
     </li>
-  <li class="bibitem" id="bib-6">Bak, P., C. Tang &amp; K. Wiesenfeld. 1988. “Self-organized criticality.” <span class="cmti-10">Physical review A </span>38 (1): 364–374. doi:<a href="http://dx.doi.org/10.1103/PhysRevA.38.364">10.1103/PhysRevA.38.364</a>.</li>
+  <li class="bibitem" id="bib-6">Bak, P., C. Tang &amp; K. Wiesenfeld. 1988. “Self-organized criticality.” <span class="cmti-10">Physical review A </span>38 (1): 364–374. doi:<a href="https://doi.org/10.1103/PhysRevA.38.364">10.1103/PhysRevA.38.364</a>.</li>
   <li class="bibitem" id="X0-botzung2008">
       Botzung, A., E. Denkova &amp; L. Manning. 2008. “Experiencing past and future personal events: Functional neuroimaging evidence on the neural bases of mental time travel.”
-      <span class="cmti-10">Brain and Cognition</span> 66 (2): 202–212. doi:<a href="http://dx.doi.org/10.1016/j.bandc.2007.07.011">10.1016/j.bandc.2007.07.011</a>.
+      <span class="cmti-10">Brain and Cognition</span> 66 (2): 202–212. doi:<a href="https://doi.org/10.1016/j.bandc.2007.07.011">10.1016/j.bandc.2007.07.011</a>.
     </li>
-  <li class="bibitem" id="bib-8">Bourgine, P., &amp; J. Stewart. 2004. “Autopoiesis and cognition.” <span class="cmti-10">Artificial Life </span>10:327. doi:<a href="http://dx.doi.org/10.1162/1064546041255557">10.1162/1064546041255557</a>.</li>
+  <li class="bibitem" id="bib-8">Bourgine, P., &amp; J. Stewart. 2004. “Autopoiesis and cognition.” <span class="cmti-10">Artificial Life </span>10:327. doi:<a href="https://doi.org/10.1162/1064546041255557">10.1162/1064546041255557</a>.</li>
   <li class="bibitem" id="bib-9">
       Chaline, J. 1999. <span class="cmti-10">Les horloges du vivant: un nouveau stade de la th</span><span class="cmti-10">é</span><span class="cmti-10">orie de l’</span><span class="cmti-10">é</span>
       <span class="cmti-10">volution? </span>Hachette Littératures<span class="cmti-10">.</span>
     </li>
   <li class="bibitem" id="X0-cranford1983body">
       Cranford, J.A. 1983. “Body temperature, heart rate and oxygen consumption of normothermic and heterothermic western jumping mice (Zapus princeps).” <span class="cmti-10">Comparative Biochemistry and Physiology</span>
-      <span class="cmti-10">- A </span>74 (3): 595. doi:<a href="http://dx.doi.org/10.1016/0300-9629(83)90553-4">10.1016/0300-9629(83)90553-4</a>. (Cited on page <a href="#pagee19">19</a>).
+      <span class="cmti-10">- A </span>74 (3): 595. doi:<a href="https://doi.org/10.1016/0300-9629(83)90553-4">10.1016/0300-9629(83)90553-4</a>. (Cited on page <a href="#pagee19">19</a>).
     </li>
   <li class="bibitem" id="X0-edelman2000">
       Edelman, G.M., &amp; G. Tononi. 2000. “Reentry and the dynamic core: neural correlates of conscious experience.” In
@@ -6719,22 +6719,22 @@ and intermittent pacing. (c) Female, 72, with atrial fibrillation. (d) Male, 43,
   <li class="bibitem" id="X0-edelman2001">_________. 2001. <span class="cmti-10">A universe of consciousness: How matter becomes imagination. </span>Basic Books.</li>
   <li class="bibitem" id="X0-Fabrizio04">
       Fabrizio, P., S. D. Pletcher, N. Minois, J.W. Vaupel &amp; V.D. Longo. 2004. “Chronological aging-independent replicative life span regulation by Msn2/Msn4 and Sod2 in Saccharomyces cerevisiae.”
-      <span class="cmti-10">FEBS Letters </span>557 (1–3): 136–142. doi:<a href="http://dx.doi.org/10.1016/S0014-5793(03)01462-5">10.1016/S0014-5793(03)01462-5</a>. (Cited on page <a href="#pagee5">5</a>).
+      <span class="cmti-10">FEBS Letters </span>557 (1–3): 136–142. doi:<a href="https://doi.org/10.1016/S0014-5793(03)01462-5">10.1016/S0014-5793(03)01462-5</a>. (Cited on page <a href="#pagee5">5</a>).
     </li>
   <li class="bibitem" id="X0-feynman1967">Feynman, R.P., &amp; J. Gleick. 1967. <span class="cmti-10">The character of physical law. </span>MIT press. (Cited on page <a href="#pagee2">2</a>).</li>
   <li class="bibitem" id="X0-PhysioNet">
       Goldberger, A.L., L.A.N. Amaral, L. Glass, J.M. Hausdorff, P.C. Ivanov, R.G. Mark, J.E. Mietus, G.B. Moody, C.-K. Peng &amp; H.E. Stanley. 2000. “PhysioBank, PhysioToolkit, and PhysioNet: Components of a New Research
-      Resource for Complex Physiologic Signals.” <span class="cmti-10">Circulation </span>101, no. 23 (June): e215–e220. doi:<a href="http://dx.doi.org/10.1161/01.CIR.101.23.e215">10.1161/01.CIR.101.23.e215</a>. (Cited on pages
+      Resource for Complex Physiologic Signals.” <span class="cmti-10">Circulation </span>101, no. 23 (June): e215–e220. doi:<a href="https://doi.org/10.1161/01.CIR.101.23.e215">10.1161/01.CIR.101.23.e215</a>. (Cited on pages
       <a href="#pagee25">25</a>, <a href="#pagee27">27</a>, <a href="#pagee29">29</a>).
     </li>
   <li class="bibitem" id="X0-hellbrugge1964circadian">
       Hellbrugge, T., J.E. Lange, J. Rutenfranz &amp; K. Stehr. 1964. “Circadian periodicity of physiological functions in different stages of infancy and childhood.”
       <span class="cmti-10">Annals of the New York Academy of</span> <span class="cmti-10">Sciences </span>117 (1 Photo-Neuro-Endocrine Effects in Ciradian Systems, with Particular Reference to the Eye): 361–373. doi:
-      <a href="http://dx.doi.org/10.1111/j.1749-6632.1964.tb48193.x">10.1111/j.1749-6632.1964.tb48193.x</a>. (Cited on page <a href="#pagee19">19</a>).
+      <a href="https://doi.org/10.1111/j.1749-6632.1964.tb48193.x">10.1111/j.1749-6632.1964.tb48193.x</a>. (Cited on page <a href="#pagee19">19</a>).
     </li>
   <li class="bibitem" id="bib-17">
       Horsfield, K. 1977. “Morphology of branching trees related to entropy.” <span class="cmti-10">Respiration Physiology </span>29 (2): 179. doi:
-      <a href="http://dx.doi.org/10.1016/0034-5687(77)90090-1">10.1016/0034-5687(77)90090-1</a>.
+      <a href="https://doi.org/10.1016/0034-5687(77)90090-1">10.1016/0034-5687(77)90090-1</a>.
     </li>
   <li class="bibitem" id="X0-leme98">
       Le Méhauté, A., R. Nigmatullin &amp; L. Nivanen. 1998. <span class="cmti-10">Fl</span><span class="cmti-10">è</span><span class="cmti-10">ches du temps et g</span><span class="cmti-10">é</span>
@@ -6742,7 +6742,7 @@ and intermittent pacing. (c) Female, 72, with atrial fibrillation. (d) Male, 43,
     </li>
   <li class="bibitem" id="X0-levanquyen2003">
       Le Van Quyen, M. 2003. “Disentangling the dynamic core: a research program for a neurodynamics at the large-scale.” <span class="cmti-10">Biological Research </span>36:67–88. doi:
-      <a href="http://dx.doi.org/10.4067/S0716-97602003000100006">10.4067/S0716-97602003000100006</a>.
+      <a href="https://doi.org/10.4067/S0716-97602003000100006">10.4067/S0716-97602003000100006</a>.
     </li>
   <li class="bibitem" id="bib-20">
       Lecointre, G., H. Le Guyader &amp; D. Visset. 2001. <span class="cmti-10">Classification phylog</span><span class="cmti-10">é</span><span class="cmti-10">n</span><span class="cmti-10">é</span>
@@ -6750,41 +6750,41 @@ and intermittent pacing. (c) Female, 72, with atrial fibrillation. (d) Male, 43,
     </li>
   <li class="bibitem" id="X0-lindstedt">
       Lindstedt, S.L., &amp; W.A. Calder III. 1981. “Body size, physiological time, and longevity of homeothermic animals.” <span class="cmti-10">Quarterly Review of Biology: </span>1–16. doi:
-      <a href="http://dx.doi.org/10.1086/412080">10.1086/412080</a>. (Cited on page <a href="#pagee5">5</a>).
+      <a href="https://doi.org/10.1086/412080">10.1086/412080</a>. (Cited on page <a href="#pagee5">5</a>).
     </li>
   <li class="bibitem" id="X0-longo2011">
       Longo, G., &amp; M. Montévil. 2011. “Protention and retention in biological systems.” <span class="cmti-10">Theory in</span> <span class="cmti-10">Biosciences </span>130 (2): 107–117.
       <span class="small-caps">issn</span>: 1431-7613. doi:
-      <a href="http://dx.doi.org/10.1007/s12064-010-0116-6">10.1007/s12064-010-0116-6</a>. (Cited on page <a href="#pagee35">35</a>).
+      <a href="https://doi.org/10.1007/s12064-010-0116-6">10.1007/s12064-010-0116-6</a>. (Cited on page <a href="#pagee35">35</a>).
     </li>
   <li class="bibitem" id="X0-massin2000">
       Massin, M.M., K. Maeyns, N. Withofs, F. Ravet &amp; P. Gerard. 2000. “Circadian rhythm of heart rate and heart rate variability.” <span class="cmti-10">Archives of Disease in Childhood </span>83 (2): 179–182. doi:
-      <a href="http://dx.doi.org/10.1136/adc.83.2.179">10.1136/adc.83.2.179</a>. (Cited on page <a href="#pagee15">15</a>).
+      <a href="https://doi.org/10.1136/adc.83.2.179">10.1136/adc.83.2.179</a>. (Cited on page <a href="#pagee15">15</a>).
     </li>
   <li class="bibitem" id="X0-mortola2004">
       Mortola, J.P., &amp; C. Lanthier. 2004. “Scaling the amplitudes of the circadian pattern of resting oxygen consumption, body temperature and heart rate in mammals.” <span class="cmti-10">Comparative Biochemistry</span>
-      <span class="cmti-10">and Physiology - A </span>139 (1): 83–95. doi:<a href="http://dx.doi.org/10.1016/j.cbpb.2004.07.007">10.1016/j.cbpb.2004.07.007</a>. (Cited on page <a href="#pagee14">14</a>).
+      <span class="cmti-10">and Physiology - A </span>139 (1): 83–95. doi:<a href="https://doi.org/10.1016/j.cbpb.2004.07.007">10.1016/j.cbpb.2004.07.007</a>. (Cited on page <a href="#pagee14">14</a>).
     </li>
   <li class="bibitem" id="X0-nottale1993">Nottale, L. 1993. <span class="cmti-10">Fractal space-time and microphysics: towards a theory of scale relativity. </span>World Scientific. (Cited on page <a href="#pagee2">2</a>).</li>
   
   <li class="bibitem" id="X0-97">
-      Overduin, J.M., &amp; P.S. Wesson. 1997. “Kaluza-Klein Gravity.” <span class="cmti-10">Physics Reports </span>283:303–380. doi:<a href="http://dx.doi.org/10.1016/S0370-1573(96)00046-4">10.1016/S0370-1573(96)00046-4</a>.
+      Overduin, J.M., &amp; P.S. Wesson. 1997. “Kaluza-Klein Gravity.” <span class="cmti-10">Physics Reports </span>283:303–380. doi:<a href="https://doi.org/10.1016/S0370-1573(96)00046-4">10.1016/S0370-1573(96)00046-4</a>.
       (Cited on page <a href="#pagee6">6</a>).
     </li>
   <li class="bibitem" id="bib-27">Peters, R.H. 1986. <span class="cmti-10">The ecological implications of body size. </span>Cambridge U. P.</li>
   <li class="bibitem" id="bib-28">
       Petitot, J. 2003. “The neurogeometry of pinwheels as a sub-Riemannian contact structure.” <span class="cmti-10">Journal</span> <span class="cmti-10">of Physiology, Paris </span>97 (2-3): 265–309. doi:
-      <a href="http://dx.doi.org/10.1016/j.jphysparis.2003.10.010">10.1016/j.jphysparis.2003.10.010</a>.
+      <a href="https://doi.org/10.1016/j.jphysparis.2003.10.010">10.1016/j.jphysparis.2003.10.010</a>.
     </li>
   <li class="bibitem" id="bib-29">Rosen, R. 1991. <span class="cmti-10">Life itself: a comprehensive inquiry into the nature, origin, and fabrication of life.</span> Columbia U. P.</li>
   <li class="bibitem" id="X0-savage2004">
       Savage, V.M., J.F. Gilloly, W.H. Woodruff, G.B. West, A.P. Allen, B.J. Enquist &amp; J.H. Brown. 2004. “The predominance of quarter-power scaling in biology.” <span class="cmti-10">Ecology </span>18:257–282. doi:
-      <a href="http://dx.doi.org/10.1111/j.0269-8463.2004.00856.x">10.1111/j.0269-8463.2004.00856.x</a>. (Cited on pages <a href="#pagee5">5</a>, <a href="#pagee14">14</a>).
+      <a href="https://doi.org/10.1111/j.0269-8463.2004.00856.x">10.1111/j.0269-8463.2004.00856.x</a>. (Cited on pages <a href="#pagee5">5</a>, <a href="#pagee14">14</a>).
     </li>
   <li class="bibitem" id="X0-schmidtnielsen1984">Schmidt-Nielsen, K. 1984. <span class="cmti-10">Scaling. </span>Cambridge U. P.</li>
   <li class="bibitem" id="X0-szpunar2007">
       Szpunar, K.K., J.M. Watson &amp; K.B. McDermott. 2007. “Neural substrates of envisioning the future.” <span class="cmti-10">Proceedings of the National</span> <span class="cmti-10">Academy of Sciences </span>104 (2):
-      642. doi:<a href="http://dx.doi.org/10.1073/pnas.0610082104">10.1073/pnas.0610082104</a>.
+      642. doi:<a href="https://doi.org/10.1073/pnas.0610082104">10.1073/pnas.0610082104</a>.
     </li>
   <li class="bibitem" id="X0-vangelder1999">
       Van Gelder, T. 1999. “Wooden iron? Husserlian phenomenology meets cognitive science.” In <span class="cmti-10">Naturalizing Phenomenology: Issues in Contemporary Phenomenology and Cognitive Science,</span> edited by J.
@@ -6796,24 +6796,24 @@ and intermittent pacing. (c) Female, 72, with atrial fibrillation. (d) Male, 43,
     </li>
   <li class="bibitem" id="X0-vaz1978">
       Vaz, N.M., &amp; F.J. Varela. 1978. “Self and non-sense: an organism-centered approach to immunology.” <span class="cmti-10">Medical Hypotheses </span>4 (3): 231–267. doi:
-      <a href="http://dx.doi.org/10.1016/0306-9877(78)90005-1">10.1016/0306-9877(78)90005-1</a>.
+      <a href="https://doi.org/10.1016/0306-9877(78)90005-1">10.1016/0306-9877(78)90005-1</a>.
     </li>
   <li class="bibitem" id="bib-36">
       Waddington, G.H. 1977. “Stabilisation In Systems: Chreods and epigenetic landscapes.” <span class="cmti-10">Futures</span> 9 (2): 139–146.
       <span class="small-caps">issn</span>: 0016-3287. doi:
-      <a href="http://dx.doi.org/10.1016/0016-3287(77)90006-4">10.1016/0016-3287(77)90006-4</a>.
+      <a href="https://doi.org/10.1016/0016-3287(77)90006-4">10.1016/0016-3287(77)90006-4</a>.
     </li>
   <li class="bibitem" id="X0-West2005">
       West, G.B., &amp; J.H. Brown. 2005. “The origin of allometric scaling laws in biology from genomes to ecosystems: Towards a quantitative unifying theory of biological structure and organization.”
-      <span class="cmti-10">Journal of Experimental Biology </span>208 (9): 1575–1592. doi:<a href="http://dx.doi.org/10.1242/jeb.01589">10.1242/jeb.01589</a>. (Cited on page <a href="#pagee19">19</a>).
+      <span class="cmti-10">Journal of Experimental Biology </span>208 (9): 1575–1592. doi:<a href="https://doi.org/10.1242/jeb.01589">10.1242/jeb.01589</a>. (Cited on page <a href="#pagee19">19</a>).
     </li>
   <li class="bibitem" id="bib-37">
       West, G.B., J.H. Brown &amp; B.J. Enquist. 1997. “A General Model for the Origin of Allometric Scaling Laws in Biology.” <span class="cmti-10">Science </span>276 (5309): 122–126. doi:
-      <a href="http://dx.doi.org/10.1126/science.276.5309.122">10.1126/science.276.5309.122</a>.
+      <a href="https://doi.org/10.1126/science.276.5309.122">10.1126/science.276.5309.122</a>.
     </li>
   <li class="bibitem" id="bib-39">
       _________. 1999. “The Fourth Dimension of Life: Fractal Geometry and Allometric Scaling of Organisms.” <span class="cmti-10">Science </span>284 (5420): 1677–1679. doi:
-      <a href="http://dx.doi.org/10.1126/science.284.5420.1677">10.1126/science.284.5420.1677</a>.
+      <a href="https://doi.org/10.1126/science.284.5420.1677">10.1126/science.284.5420.1677</a>.
     </li>
   <li class="bibitem" id="X0-winfree">Winfree, A.T. 2001. <span class="cmti-10">The geometry of biological time. </span>Second. Springer Verlag. (Cited on page <a href="#pagee6">6</a>).
   </li>
