--- a/src/publications/articles/2011-LM-Biology-Extending-Criticality/index.njk
+++ b/src/publications/articles/2011-LM-Biology-Extending-Criticality/index.njk
@@ -608,22 +608,22 @@ excerpt: Symmetries play a critical role in physics. By contrast, symmetry chang
 <ol class="thebibliography" id="pagee12">
   <li class="bibitem" id="X0-aon2004percolation">
       Aon, M.A., S. Cortassa, and B. O’Rourke. 2004. “Percolation and criticality in a mitochondrial network.” <span class="cmti-10">Proceedings of the National Academy</span>
-      <span class="cmti-10">of Sciences </span>101 (13): 4447. doi:<a href="http://dx.doi.org/10.1073/pnas.0307156101">10.1073/pnas.0307156101</a>. (Cited on page <a href="#pagee10">10</a>).
+      <span class="cmti-10">of Sciences </span>101 (13): 4447. doi:<a href="https://doi.org/10.1073/pnas.0307156101">10.1073/pnas.0307156101</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-Aspect">
       Aspect, A., P. Grangier, and G. Roger. 1982. “Experimental Realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A New Violation of Bell’s Inequalities.” <span class="cmti-10">Physical Review Letters </span>49 (2):
-      91–94. doi:<a href="http://dx.doi.org/10.1103/PhysRevLett.49.91">10.1103/PhysRevLett.49.91</a>. (Cited on page <a href="#pagee3">3</a>).
+      91–94. doi:<a href="https://doi.org/10.1103/PhysRevLett.49.91">10.1103/PhysRevLett.49.91</a>. (Cited on page <a href="#pagee3">3</a>).
     </li>
   <li class="bibitem" id="X0-bailly1993">
       Bailly, F., F. Gaill, and R. Mosseri. 1993. “Orgons and biolons in theoretical biology: Phenomenological analysis and quantum analogies.” <span class="cmti-10">Acta Biotheoretica </span>41 (1–2): 3–11. doi:
-      <a href="http://dx.doi.org/10.1007/BF00712769">10.1007/BF00712769</a>. (Cited on pages <a href="#pagee8">8</a> <a href="#pagee9">sq.</a>).
+      <a href="https://doi.org/10.1007/BF00712769">10.1007/BF00712769</a>. (Cited on pages <a href="#pagee8">8</a> <a href="#pagee9">sq.</a>).
     </li>
   <li class="bibitem" id="X0-bailly2008">
       Bailly, F., and G. Longo. 2008. “Extended critical situations: the physical singularity of life phenomena.” <span class="cmti-10">Journal of Biological Systems</span> 16 (2): 309. doi:
-      <a href="http://dx.doi.org/10.1142/S0218339008002514">10.1142/S0218339008002514</a>. (Cited on pages <a href="#pagee8">8</a>, <a href="#pagee10">10</a>).
+      <a href="https://doi.org/10.1142/S0218339008002514">10.1142/S0218339008002514</a>. (Cited on pages <a href="#pagee8">8</a>, <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-bailly2009">
-      _________. 2009. “Biological organization and anti-entropy.” <span class="cmti-10">Journal of Biological Systems</span> 17 (1): 63–96. doi:<a href="http://dx.doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715</a>.
+      _________. 2009. “Biological organization and anti-entropy.” <span class="cmti-10">Journal of Biological Systems</span> 17 (1): 63–96. doi:<a href="https://doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715</a>.
       (Cited on page <a href="#pagee11">11</a>).
     </li>
   <li class="bibitem" id="X0-bailly2011">
@@ -633,10 +633,10 @@ excerpt: Symmetries play a critical role in physics. By contrast, symmetry chang
   <li class="bibitem" id="X0-bailly2011b">
       Bailly, F., G. Longo, and M. Montévil. 2011. “A 2-dimensional geometry for biological time.” <span class="cmti-10">Progress in Biophysics and Molecular</span> <span class="cmti-10">Biology </span>106 (3): 474–484.
       <span class="cmcsc-10"><span class="small-caps">issn</span></span>: 0079-6107. doi:
-      <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001</a>. (Cited on page <a href="#pagee11">11</a>).
+      <a href="https://doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001</a>. (Cited on page <a href="#pagee11">11</a>).
     </li>
   <li class="bibitem" id="X0-Bak88">
-      Bak, P., C. Tang, and K. Wiesenfeld. 1988. “Self-organized criticality.” <span class="cmti-10">Physical review A</span> 38 (1): 364–374. doi:<a href="http://dx.doi.org/10.1103/PhysRevA.38.364">10.1103/PhysRevA.38.364</a>. (Cited
+      Bak, P., C. Tang, and K. Wiesenfeld. 1988. “Self-organized criticality.” <span class="cmti-10">Physical review A</span> 38 (1): 364–374. doi:<a href="https://doi.org/10.1103/PhysRevA.38.364">10.1103/PhysRevA.38.364</a>. (Cited
       on page <a href="#pagee5">5</a>).
     </li>
   <li class="bibitem" id="X0-Binney">
@@ -645,16 +645,16 @@ excerpt: Symmetries play a critical role in physics. By contrast, symmetry chang
     </li>
   <li class="bibitem" id="X0-SebastienCamalet99">
       Camalet, S., T. Duke, F. Julicher, and J. Prost. 1999. “Auditory sensitivity provided by self-tuned critical oscillations of hair cells.” <span class="cmti-10">Proteins: Structure,</span>
-      <span class="cmti-10">Function, and Bioinformatics </span>28 (7): 1999. doi:<a href="http://dx.doi.org/10.1073/pnas.97.7.3183">10.1073/pnas.97.7.3183</a>. eprint:
+      <span class="cmti-10">Function, and Bioinformatics </span>28 (7): 1999. doi:<a href="https://doi.org/10.1073/pnas.97.7.3183">10.1073/pnas.97.7.3183</a>. eprint:
       <a class="url" href="http://www.pnas.org/content/97/7/3183.full.pdf:PDF+html">http://www.pnas.org/content/97/7/3183.full.pdf:PDF+html</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-delamotte2004hint">
-      Delamotte, B. 2004. “A hint of renormalization.” <span class="cmti-10">American Journal</span> <span class="cmti-10">of Physics </span>72:170. doi:<a href="http://dx.doi.org/10.1119/1.1624112">10.1119/1.1624112</a>. (Cited on
+      Delamotte, B. 2004. “A hint of renormalization.” <span class="cmti-10">American Journal</span> <span class="cmti-10">of Physics </span>72:170. doi:<a href="https://doi.org/10.1119/1.1624112">10.1119/1.1624112</a>. (Cited on
       page <a href="#pagee7">7</a>).
     </li>
   <li class="bibitem" id="X0-EPR">
       Einstein, A., B. Podolsky, and N. Rosen. 1935. “Can quantum-mechanical description of physical reality be considered complete?” <span class="cmti-10">Physical Review </span>47 (10): 777–780. doi:
-      <a href="http://dx.doi.org/10.1103/PhysRev.47.777">10.1103/PhysRev.47.777</a>. (Cited on page <a href="#pagee3">3</a>).
+      <a href="https://doi.org/10.1103/PhysRev.47.777">10.1103/PhysRev.47.777</a>. (Cited on page <a href="#pagee3">3</a>).
     </li>
   <li class="bibitem" id="X0-Jensen">
       Jensen, H.J. 1998. <span class="cmti-10">Self-Organized Criticality,</span> <span class="cmti-10">Emergent Complex Behavior in Physical and</span> <span class="cmti-10">Biological Systems. </span>Cambridge lectures in Physics
@@ -663,40 +663,40 @@ excerpt: Symmetries play a critical role in physics. By contrast, symmetry chang
   <li class="bibitem" id="X0-Kauffman93">Kauffman, S.A. 1993. <span class="cmti-10">The origins of order.</span> Oxford U. P. (Cited on page <a href="#pagee5">5</a>).</li>
   <li class="bibitem" id="X0-Kochen">
       Kochen, S., and E.P. Specker. 1967. “The problem of hidden variables in quantum mechanics.” <span class="cmti-10">Journal of Mathematics</span> <span class="cmti-10">and Mechanics </span>17:59–87. doi:
-      <a href="http://dx.doi.org/10.1103/RevModPhys.38.447">10.1103/RevModPhys.38.447</a>. (Cited on page <a href="#pagee3">3</a>).
+      <a href="https://doi.org/10.1103/RevModPhys.38.447">10.1103/RevModPhys.38.447</a>. (Cited on page <a href="#pagee3">3</a>).
     </li>
   <li class="bibitem" id="X0-longo2011">
       Longo, G., and M. Montévil. 2011. “Protention and retention in biological systems.” <span class="cmti-10">Theory in</span> <span class="cmti-10">Biosciences </span>130 (2): 107–117.
       <span class="cmcsc-10"><span class="small-caps">issn</span></span>: 1431-7613. doi:
-      <a href="http://dx.doi.org/10.1007/s12064-010-0116-6">10.1007/s12064-010-0116-6</a>. (Cited on page <a href="#pagee11">11</a>).
+      <a href="https://doi.org/10.1007/s12064-010-0116-6">10.1007/s12064-010-0116-6</a>. (Cited on page <a href="#pagee11">11</a>).
     </li>
   <li class="bibitem" id="X0-Makowiec2006">
       Makowiec, D., R. Galažska, A. Dudkowska, A. Rynkiewicz, and M. Zwierz. 2006. “Long-range dependencies in heart rate signals–revisited.” <span class="cmti-10">Physica A: Statistical Mechanics and its</span>
       <span class="cmti-10">Applications </span>369 (2): 632–644. <span class="cmcsc-10"><span class="small-caps">issn</span></span>:
-      0378-4371. doi:<a href="http://dx.doi.org/10.1016/j.physa.2006.02.038">10.1016/j.physa.2006.02.038</a>. (Cited on page <a href="#pagee10">10</a>).
+      0378-4371. doi:<a href="https://doi.org/10.1016/j.physa.2006.02.038">10.1016/j.physa.2006.02.038</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-noble2006">Noble, D. 2006. <span class="cmti-10">The music of life. </span>Oxford: Oxford U. P. (Cited on page <a href="#pagee3">3</a>).</li>
   <li class="bibitem" id="X0-nykter2008gene">
       Nykter, M., N.D. Price, M. Aldana, S.A. Ramsey, S.A. Kauffman, L.E. Hood, O. Yli-Harja, and I. Shmulevich. 2008. “Gene expression dynamics in the macrophage exhibit criticality.” <span class="cmti-10">Proceedings</span>
-      <span class="cmti-10">of the National Academy of Sciences </span>105 (6): 1897. doi:<a href="http://dx.doi.org/10.1073/pnas.0711525105">10.1073/pnas.0711525105</a>. (Cited on page <a href="#pagee10">10</a>).
+      <span class="cmti-10">of the National Academy of Sciences </span>105 (6): 1897. doi:<a href="https://doi.org/10.1073/pnas.0711525105">10.1073/pnas.0711525105</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-Perazzo00">
       Perazzo, C.A., E.A. Fernandez, D.R. Chialvo, and P. Willshaw. 2000. “Large Scale-Invariant Fluctuations in Normal Blood Cell Counts: A sign of criticality?” <span class="cmti-10">Fractals </span>8 (3): 279–283. doi:
-      <a href="http://dx.doi.org/10.1142/S0218348X00000329">10.1142/S0218348X00000329</a>. (Cited on page <a href="#pagee10">10</a>).
+      <a href="https://doi.org/10.1142/S0218348X00000329">10.1142/S0218348X00000329</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-pikkujamsa1999cardiac">
       Pikkujamsa, S.M., T.H. Makikallio, L.B. Sourander, I.J. Raiha, P. Puukka, J. Skytta, C.-K. Peng, A.L. Goldberger, and H.V. Huikuri. 1999. “Cardiac interbeat interval dynamics from childhood to senescence: comparison of
-      conventional and new measures based on fractals and chaos theory.” <span class="cmti-10">Circulation </span>100 (4): 393. doi:<a href="http://dx.doi.org/10.1161/01.CIR.100.4.393">10.1161/01.CIR.100.4.393</a>. (Cited on page
+      conventional and new measures based on fractals and chaos theory.” <span class="cmti-10">Circulation </span>100 (4): 393. doi:<a href="https://doi.org/10.1161/01.CIR.100.4.393">10.1161/01.CIR.100.4.393</a>. (Cited on page
       <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-IlyaShmulevich05">
       Shmulevich, I., S.A. Kauffman, and M. Aldana. 2005. “Eukaryotic cells are dynamically ordered or critical but not chaotic.” <span class="cmti-10">Proceedings of</span>
-      <span class="cmti-10">the National Academy of Sciences </span>102 (38): 13439–13444. doi:<a href="http://dx.doi.org/10.1073/pnas.0506771102">10.1073/pnas.0506771102</a>. (Cited on page <a href="#pagee10">10</a>).
+      <span class="cmti-10">the National Academy of Sciences </span>102 (38): 13439–13444. doi:<a href="https://doi.org/10.1073/pnas.0506771102">10.1073/pnas.0506771102</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-Silverman">Silverman, M. 2008. <span class="cmti-10">Quantum Superposition.</span> Springer Verlag. (Cited on page <a href="#pagee16">16</a>).</li>
   <li class="bibitem" id="X0-Sole99">
       Sole, R.V., S.C. Manrubia, M. Benton, S.A. Kauffman, and P. Bak. 1999. “Criticality and scaling in evolutionary ecology.” <span class="cmti-10">Trends</span> <span class="cmti-10">in Ecololgy &amp; Evolution </span>14 (4):
-      156–160. doi:<a href="http://dx.doi.org/10.1016/S0169-5347(98)01518-3">10.1016/S0169-5347(98)01518-3</a>. (Cited on page <a href="#pagee10">10</a>).
+      156–160. doi:<a href="https://doi.org/10.1016/S0169-5347(98)01518-3">10.1016/S0169-5347(98)01518-3</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-Society">
       Sonnenschein, C., and A.M. Soto. 1999. <span class="cmti-10">The</span> <span class="cmti-10">society of cells: cancer and control of cell</span> <span class="cmti-10">proliferation. </span>New York: Springer Verlag. (Cited on
@@ -704,20 +704,20 @@ excerpt: Symmetries play a critical role in physics. By contrast, symmetry chang
     </li>
   <li class="bibitem" id="X0-soto2008">
       Soto, A.M., C. Sonnenschein, and P.-A. Miquel. 2008. “On physicalism and downward causation in developmental and cancer biology.” <span class="cmti-10">Acta Biotheoretica </span>56 (4): 257–274. doi:
-      <a href="http://dx.doi.org/10.1007/s10441-008-9052-y">10.1007/s10441-008-9052-y</a>. (Cited on pages <a href="#pagee3">3</a>, <a href="#pagee11">11</a>, <a href="#pagee16">16</a>).
+      <a href="https://doi.org/10.1007/s10441-008-9052-y">10.1007/s10441-008-9052-y</a>. (Cited on pages <a href="#pagee3">3</a>, <a href="#pagee11">11</a>, <a href="#pagee16">16</a>).
     </li>
   <li class="bibitem" id="X0-suzuki1982critical">
       Suzuki, M., K. Kaneko, and S. Takesue. 1982. “Critical Slowing Down in Stochastic Processes. I.” <span class="cmti-10">Progress of Theoretical Physics </span>67 (6): 1756–1775. doi:
-      <a href="http://dx.doi.org/10.1143/PTP.67.1756">10.1143/PTP.67.1756</a>. (Cited on page <a href="#pagee6">6</a>).
+      <a href="https://doi.org/10.1143/PTP.67.1756">10.1143/PTP.67.1756</a>. (Cited on page <a href="#pagee6">6</a>).
     </li>
   <li class="bibitem" id="X0-toulouse1977introduction">Toulouse, G., P. Pfeuty, and G. Barton. 1977. <span class="cmti-10">Introduction to the renormalization group and to</span> <span class="cmti-10">critical phenomena. </span>London: Wiley. (Cited on page <a href="#pagee5">5</a>).</li>
   <li class="bibitem" id="X0-tredicce2004critical">
       Tredicce, J.R., G.L. Lippi, P. Mandel, B. Charasse, A. Chevalier, and B. Picque. 2004. “Critical slowing down at a bifurcation.” <span class="cmti-10">American Journal of</span> <span class="cmti-10">Physics </span>72:799. doi:
-      <a href="http://dx.doi.org/10.1119/1.1688783">10.1119/1.1688783</a>. (Cited on page <a href="#pagee6">6</a>).
+      <a href="https://doi.org/10.1119/1.1688783">10.1119/1.1688783</a>. (Cited on page <a href="#pagee6">6</a>).
     </li>
   <li class="bibitem" id="X0-wagner1996chaos">
       Wagner, C.D., B. Nafz, and P.B. Persson. 1996. “Chaos in blood pressure control.” <span class="cmti-10">Cardiovascular Research</span> 31 (3): 380. doi:
-      <a href="http://dx.doi.org/10.1016/S0008-6363(96)00007">10.1016/S0008-6363(96)00007</a>. (Cited on page <a href="#pagee10">10</a>).
+      <a href="https://doi.org/10.1016/S0008-6363(96)00007">10.1016/S0008-6363(96)00007</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-weibel1994">
       Weibel, E.R. 1994. “Design of biological organisms and fractal geometry.” In <span class="cmti-10">Fractals in</span> <span class="cmti-10">Biology and Medicine, </span>vol. 1. Springer Verlag. (Cited on page
@@ -725,11 +725,11 @@ excerpt: Symmetries play a critical role in physics. By contrast, symmetry chang
     </li>
   <li class="bibitem" id="X0-GerhardWerner07">
       Werner, G. 2007. “Metastability, criticality and phase transitions in brain and its models.” <span class="cmti-10">Biosystems </span>90 (2): 496–508. doi:
-      <a href="http://dx.doi.org/10.1016/j.biosystems.2006.12.001">10.1016/j.biosystems.2006.12.001</a>. (Cited on page <a href="#pagee10">10</a>).
+      <a href="https://doi.org/10.1016/j.biosystems.2006.12.001">10.1016/j.biosystems.2006.12.001</a>. (Cited on page <a href="#pagee10">10</a>).
     </li>
   <li class="bibitem" id="X0-west1997">
       West, G.B., J.H. Brown, and B.J. Enquist. 1997. “A General Model for the Origin of Allometric Scaling Laws in Biology.” <span class="cmti-10">Science </span>276 (5309): 122–126. doi:
-      <a href="http://dx.doi.org/10.1126/science.276.5309.122">10.1126/science.276.5309.122</a>. eprint:
+      <a href="https://doi.org/10.1126/science.276.5309.122">10.1126/science.276.5309.122</a>. eprint:
       <a class="url" href="http://www.sciencemag.org/cgi/reprint/276/5309/122.pdf:PDF">http://www.sciencemag.org/cgi/reprint/276/5309/122.pdf:PDF</a>. (Cited on page <a href="#pagee16">16</a>).
     
   </li>
