--- a/src/publications/articles/2011-LM-Protention-Retention-Biology/index.njk
+++ b/src/publications/articles/2011-LM-Protention-Retention-Biology/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We suggest a simple functional representation of biological protention and introduce abstract notions of biological inertia and extended presented.
+excerpt: We suggest a simple functional representation of biological protention and introduce abstract notions of biological inertia and extended present.
 illust: exp-1-.png
 illustClass: darkFilter
 ---
