--- a/src/publications/articles/2017-LM-Logic-Physics-Biology/index.njk
+++ b/src/publications/articles/2017-LM-Logic-Physics-Biology/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: We summarize the theoretical ideas of our book, Perspectives on Organisms, where we discuss biological time, anti-entropy, randomness, incompleteness, etc.
+excerpt: We summarize the theoretical ideas of our book, Perspectives on Organisms, where we discuss biological time, anti-entropy, randomness, incompleteness, symmetries.
 ---
 
 <!--CompileMaths-->
