--- a/src/publications/articles/2019-Montevil-First-Principles-Biology/index.njk
+++ b/src/publications/articles/2019-Montevil-First-Principles-Biology/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: Like theoretical physics, theoretical biology is not just mathematical modeling. Instead, it should strive to find suitable first principles to frame experiments and models.
+excerpt: Like theoretical physics, theoretical biology is not just mathematical modeling. Instead, it should strive to find principles to frame experiments and models.
 tags: 
     - symmetry
 ---
