--- a/src/publications/articles/2020-Montevil-Turing-Biology/index.njk
+++ b/src/publications/articles/2020-Montevil-Turing-Biology/index.njk
@@ -1,5 +1,5 @@
 ---
-excerpt: Turing distingue soigneusement l’imitation d’un phénomène de sa modélisation. En biologie, il n'y a cependant pas de cadre théorique bien établi pour encadrer la pratique de modélisation.
+excerpt: Turing distingue l’imitation d’un phénomène de sa modélisation. En biologie, il n'y a cependant pas encore de cadre théorique pour encadrer la pratique de modélisation.
 lang: fr
 syndication:
   twitter: "https://twitter.com/MMontevil/status/1386483260818087936"
