--- a/src/publications/articles/2019-Montevil-First-Principles-Biology/index.njk
+++ b/src/publications/articles/2019-Montevil-First-Principles-Biology/index.njk
@@ -2296,7 +2296,7 @@ tags:
 <li  class="bibitem" id="XSociety"> [25] Sonnenschein, C., &amp; Soto, A. (1999). <span class="cmti-10">The society of cells: cancer and control</span>
     <span class="cmti-10">of cell proliferation</span>. New York: Springer Verlag.
   </li>
-<li  class="bibitem" id="Xchapterccl"> [26] Soto, A. M., Longo, G., Miquel, P.-A., Montevil, M., Mossio, M., Perret, N., Pocheville, A., &amp; Sonnenschein, C. (2016).
+<li  class="bibitem" id="Xchapterccl"> [26] Soto, A. M., Longo, G., Miquel, P.-A., Montévil, M., Mossio, M., Perret, N., Pocheville, A., &amp; Sonnenschein, C. (2016).
     Toward a theory of organisms: Three founding principles in search of a useful integration. <span class="cmti-10">Progress in Biophysics and</span> <span class="cmti-10">Molecular Biology</span>,
     <span class="cmti-10">122</span>, 77 – 82. doi:
     <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.006">10.1016/j.pbiomolbio.2016.07.006
